--- a/css/grid.css
+++ b/css/grid.css
@@ -1,7 +1,33 @@
 #container{
-	width: 600px;
-	height: 90%;
-	background-color: #E6E6E6;
-	margin: 0 auto;
+	overflow: auto;
+	width: 960px;
+	margin: auto;
 
+}
+
+#button_container {
+	overflow: auto;
+	width: 960px;
+	margin: auto;
+	text-align: center;
+}
+.width {
+	height: 50px;
+	width: 50px;
+	background-color: #000000;
+	margin: 2px;
+	float: left;
+}
+.height {
+	height: 50px;
+	width: 50px;
+	background-color: #000000;
+	margin: 2px;
+	display: inline-block;
+}
+.new_line {
+	clear: both;
+}
+.gray {
+	background-color: #666666;
 }
